manifest/objects/L2OPlatformEventMappingRecords__mdt.object
<CustomObject>
    <fields>
        <fullName>L2O_ConcatenatewithSourceField__c</fullName>
        <label>Concatenate with Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_PlatformEventIndicator__c</fullName>
        <description>BA - L2O_BillingAddress_Indicator__c
SA - L2O_ShippingAddress_Indicator__c
OI - Object Indicator
CUI - Client Update Indicator</description>
        <label>Platform Event Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>OI</fullName>
                </value>
                <value>
                    <fullName>CUI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_PlatformEventName__c</fullName>
        <label>Platform Event Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L2O_Account_Broadcast__e</fullName>
                    <label>Account Broadcast</label>
                </value>
                <value>
                    <fullName>L2O_Post_sale_Broadcast__e</fullName>
                    <label>Post-sale Broadcast</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_SourceFieldAPIName__c</fullName>
        <label>Source Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_SourceFieldIndicator__c</fullName>
        <label>Source Field Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_SourceObject__c</fullName>
        <label>Source Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_TargetFieldAPIName__c</fullName>
        <label>Target Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Platform Event Mapping Records</label>
    <pluralLabel>Platform Event Mapping Records</pluralLabel>
</CustomObject>